<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Registar">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.JogoDoGalo.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:minHeight="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_baseline_error_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="99"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/userConfirmPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passConfirm"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/ic_baseline_spellcheck_24"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_baseline_error_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="99"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:id="@+id/submit_button"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>